[package]
name = "pyparaspace"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyparaspace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["indexmap"] }
indexmap = "1.6"
paraspace = { path = "deps/paraspace", features = ["static-link-z3"] }
